--- a/assets/css1/style.css
+++ b/assets/css1/style.css
@@ -441,17 +441,17 @@ body {
   .Button--redOutline {
     background-color: #fff;
     box-sizing: border-box;
-    border: 1px solid #CE0000;
+    border: 1px solid #D98880;;
     border-radius: 0.3rem;
     text-decoration: none;
     color: #CE0000;
     padding: .6rem 2.5rem;
     transition: all .3s ease-in-out; }
     .Button--redOutline:hover {
-      color: #fff;
-      background-color: #445372; }
+      color: rgb(3, 3, 3);
+      background-color: rgba(253, 139, 131, 0.952) }
     .Button--redOutlinea {
-      color: #ff625a; }
+      color: #080808; }
   .Button--noShadow {
     box-shadow: none; }
   .Button--big {
@@ -481,7 +481,7 @@ body {
   font-family: 'SofiaProMedium';
   font-weight: normal;
   font-size: 1.4rem;
-  color: #ff9772;
+  color: #f57575;
   text-transform: uppercase;
   text-decoration: none;
   display: inline-block;
@@ -550,7 +550,7 @@ body {
   .Page--minusTopMargin {
     margin-top: -16rem; }
   .Page--pinkGradient {
-    background-image: linear-gradient(128deg, #fefaf7, #fff1ee 64%, #ffe7e4); }
+    background-image: linear-gradient(128deg, rgb(255, 255, 255), rgb(255, 255, 255) 64%, rgba(255, 255, 255, 0.856)); }
   .Page--pink-1 {
     background-color: #fff0f0; }
   .Page--pink-2 {
@@ -564,7 +564,7 @@ body {
   .Page--violet {
     background-color: rgba(94, 0, 255, 0.12); }
   .Page--orange {
-    background-color: rgba(254, 123, 19, 0.04); }
+    background-color: rgba(255, 255, 255, 0.644); }
   .Page--mint {
     background-color: #e2fff1; }
   .Page--minHeight {
@@ -657,7 +657,7 @@ body {
         font-size: 2.7rem; } }
   .Header--sub {
     font-size: 2rem;
-    color: #FFFAF6; }
+    color: rgb(248, 78, 78); }
   .Header--handwritten {
     font-family: 'Courgette', cursive;
     font-size: 2.8rem; }
