--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -129,7 +129,7 @@ body {
 }
 
 .section.colored {
-  background: #f2f2fe;
+  background: #fcebeb;
 }
 
 .hr {
@@ -314,7 +314,7 @@ a.main-button-slider {
   font-size: 13px;
   border-radius: 20px;
   padding: 12px 20px;
-  background-color: #472427;
+  background-color: #ec2d3d;
   text-transform: uppercase;
   color: #fff;
   letter-spacing: 0.25px;
@@ -353,7 +353,7 @@ button.main-button {
   font-size: 13px;
   border-radius: 20px;
   padding: 12px 20px;
-  background-color: #8261ee;
+  background-color: #ec2d3d;
   text-transform: uppercase;
   color: #fff;
   letter-spacing: 0.25px;
@@ -1390,7 +1390,7 @@ contact
 */
 
 #contact-us {
-  padding: 160px 0px;
+  padding: 60px 0px;
 }
 
 #contact-us h5 {
@@ -1442,7 +1442,7 @@ footer
 --------------------------------------------- 
 */
 footer {
-  background-image: linear-gradient(127deg, #a759d1 0%, #8261ee 91%);
+  background-image: linear-gradient(127deg, #f17171 0%, #f13434 91%);
   padding-top: 30px;
 }
 
@@ -1480,9 +1480,9 @@ footer .social li a:hover {
 
 footer .copyright {
   text-align: center;
-  border-top: 1px solid rgba(250,250,250,0.2);
-  margin-top: 30px;
-  padding-top: 30px;
+  /* border-top: 1px solid rgba(250,250,250,0.2); */
+  margin-top: 10px;
+  /* padding-top: 30px; */
   padding-bottom: 30px;
   font-weight: 400;
   font-size: 12px;
